--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,27 @@
-# MyPresentPast Backend Environment Variables
+# ===========================================
+# MyPresentPast Backend - Environment Variables
+# ===========================================
+
+# Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=mypresentpast_db
+DB_NAME=mypresentpast
 DB_USERNAME=postgres
-DB_PASSWORD=password
-FRONTEND_URL_REACT=http://localhost:3000
-FRONTEND_URL_ANGULAR=http://localhost:4200
+DB_PASSWORD=your_db_password_here
+
+# Server Configuration
+SERVER_PORT=8081
+
+# JPA/Hibernate Configuration
+DDL_AUTO=create-drop
+SHOW_SQL=true
+
+# AI Configuration
+AI_PREFERRED_PROVIDER=openai
+AI_OPENAI_API_KEY=your_openai_api_key_here
+AI_GROQ_API_KEY=your_groq_api_key_here
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
