Se agrega registro de usuario - configuracion de JWT. - controladores de excepciones. - modelo y repositorio de usuario. - configuracion de seguridad. - pruebas de autenticacion. - actualizacion de propiedades y dependencias.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@
 
 # Server configuration
 server.port=${SERVER_PORT:8080}
-server.servlet.context-path=/api
+spring.jackson.property-naming-strategy=SNAKE_CASE
+
+# Json Web Tokens(JWT)
+jwt.secret.key=${JWT_SECRET_KEY}
 
 # Database configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:mypresentpast_db}
@@ -13,7 +16,7 @@ spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -31,4 +34,4 @@ spring.web.cors.allow-credentials=true
 # Logging (only errors and important info)
 logging.level.root=WARN
 logging.level.com.mypresentpast.backend=INFO
-logging.level.org.springframework.boot=INFO 
+logging.level.org.springframework.boot=INFO
