--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,5 @@ ai.groq.temperature=0.3
 cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:}
 cloudinary.api-key=${CLOUDINARY_API_KEY:}
 cloudinary.api-secret=${CLOUDINARY_API_SECRET:}
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
