--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 
 # Json Web Tokens(JWT)
 jwt.secret.key=${JWT_SECRET_KEY}
+jwt.expiration.ms=86400000
 
 # Database configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:mypresentpast_db}
