--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,11 +32,11 @@ spring.sql.init.mode=always
 spring.security.user.name=${ADMIN_USERNAME:admin}
 spring.security.user.password=${ADMIN_PASSWORD:admin123}
 
-# CORS configuration (using environment variables)
-spring.web.cors.allowed-origins=${FRONTEND_URL_REACT:http://localhost:3000},${FRONTEND_URL_ANGULAR:http://localhost:4200}
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
+# CORS configuration (using environment variables) - DESHABILITADO: se maneja en CorsConfig.java
+# spring.web.cors.allowed-origins=${FRONTEND_URL_REACT:http://localhost:3000},${FRONTEND_URL_ANGULAR:http://localhost:4200}
+# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# spring.web.cors.allowed-headers=*
+# spring.web.cors.allow-credentials=true
 
 # Logging configuration
 logging.level.com.mypresentpast.backend=INFO
